--- a/deepseek/deepseek-chatbot/server/package.json
+++ b/deepseek/deepseek-chatbot/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.1",
     "koa": "^2.16.0",
     "koa-router": "^13.0.1"
   }
