--- a/deepseek/deepseek-chatbot/server/package.json
+++ b/deepseek/deepseek-chatbot/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "koa": "^2.16.0",
+    "koa-bodyparser": "^4.4.1",
     "koa-router": "^13.0.1"
   }
 }
